bugs were squashed

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
   background-color: #000000;
   height: 100%;
 }
-header{
+
+.transparent{
   visibility: hidden;
 }
 footer{
@@ -11,7 +12,7 @@ footer{
 }
 
 @media only screen and (max-width: 600px) {
-  header {
+  .transparent {
     visibility: visible;
   }
   h1{
@@ -31,9 +32,21 @@ footer{
       font-weight: 800;
       margin: 1px;
     }
-    .buttons{
+    .text3,
+    .text4,
+    .text5,
+    .navbartop{
       visibility: hidden;
     }
+}
+.navbartop{
+  width: 100%;
+  background-color: #00000046;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right:0;
+  height:65px;
 }
 .recents{
   margin:50px;
@@ -43,7 +56,7 @@ footer{
   position: absolute;
   text-align: center;
   color: white;
-  top: 0;
+  top: 0px;
   left: 0;
   width: 100%;
   z-index: 1;
@@ -57,13 +70,43 @@ footer{
   margin: 2px;
 }
 .bottomtext{
+  color: #f2f2f2;
+  font-size: 12px;
   position: absolute;
-  bottom: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin: 2px;
+  bottom: 0;
+  padding:5%;
+  margin: 5%;
+  text-align: center;
 }
-
+.text3{
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 8px;
+  position: absolute;
+  top: 0;
+  right:10px;
+  text-align: center;
+  top: 10px;
+}
+.text4{
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 8px;
+  position: absolute;
+  top: 0;
+  right:120px;
+  text-align: center;
+  top: 10px;
+}
+.text5{
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px;
+  position: absolute;
+  top: 0;
+  right:220px;
+  top: 10px;
+}
 /*BUTTONS*/
 .buttons{
     background-color:rgba(255, 240, 240, 0.034);
@@ -74,17 +117,21 @@ footer{
     color: rgb(255, 255, 255);
     font-family: 'Poppins', sans-serif;
     font-weight: lighter ;
-    font-size: 19px;
+    font-size: 12px;
     height:auto;
-    bottom: 10%;
+    bottom: 5%;
+    
 }
-
 .buttons:hover{
     background-color: rgba(139, 182, 223, 0.74);
 }
 a.links{
   text-decoration: none;
-  color:aliceblue
+  color:aliceblue;
+  font-family: 'Poppins', sans-serif;
+  font-weight: lighter ;
+  font-size: 12px;
+  height:auto;
 }
 
 /* STYLES*/
